// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetUnitsNearLocation tests input validation should throw without a lat arg in the location input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error (JOI): \\"input.location.lng\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without a lng arg in the location input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error (JOI): \\"input.location.lat\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without a location input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error (JOI): \\"input.location\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without an input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error (JOI): \\"input\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without valid location input with direct resolver: RESOLVER 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error (JOI): \\"input.location.lat\\" must be greater than or equal to -90, \\"input.location.lng\\" must be less than or equal to 180"`;

exports[`GetUnitsNearLocation tests input validation should throw without valid location input with new API: NEW API 1`] = `[Error: GraphQL error: GetUnitsNearLocationQueryVariables Object Validation Error (JOI): "input.location.lat" must be greater than or equal to -90, "input.location.lng" must be less than or equal to 180]`;

exports[`GetUnitsNearLocation tests input validation should throw without valid location input with old api: OLD API 1`] = `[Error: GraphQL error: GetUnitsNearLocationQueryVariables Object Validation Error (JOI): "input.location.lat" must be greater than or equal to -90, "input.location.lng" must be less than or equal to 180]`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance - using API 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47.48992,
      "lng": 19.046135,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chain": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Prisoner chain description",
      "hu": "Rab lánc leírás",
    },
    "email": "testuser+chainadmin@anyupp.com",
    "id": "test_chain_1_id",
    "isActive": true,
    "name": "˜Rab lánc S",
    "phone": "1234567890",
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "updatedAt": "MASKED DATE",
  },
  "chainId": "test_chain_1_id",
  "currency": "EUR",
  "distance": 0,
  "group": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test group #test_group_1_id description",
      "hu": "Teszt group #test_group_1_id leírás",
    },
    "email": "testuser+groupadmin@anyupp.com",
    "id": "test_group_1_id",
    "name": "Monád csoport S",
    "phone": "36701234123",
    "updatedAt": "MASKED DATE",
  },
  "groupId": "test_group_1_id",
  "id": "test_unit_03",
  "isAcceptingOrders": true,
  "name": "Késdobáló S",
  "openingHours": "09:00-22:00",
  "openingHoursNext7": Any<Array>,
  "orderPolicy": null,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "unit": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47.48992,
        "lng": 19.046135,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_unit_03",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": null,
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": "MASKED DATE",
  },
}
`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance - using API: retrieved unit_01 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47.490108,
      "lng": 19.047077,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chain": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Prisoner chain description",
      "hu": "Rab lánc leírás",
    },
    "email": "testuser+chainadmin@anyupp.com",
    "id": "test_chain_1_id",
    "isActive": true,
    "name": "˜Rab lánc S",
    "phone": "1234567890",
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "updatedAt": "MASKED DATE",
  },
  "chainId": "test_chain_1_id",
  "currency": "EUR",
  "distance": 74,
  "group": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test group #test_group_1_id description",
      "hu": "Teszt group #test_group_1_id leírás",
    },
    "email": "testuser+groupadmin@anyupp.com",
    "id": "test_group_1_id",
    "name": "Monád csoport S",
    "phone": "36701234123",
    "updatedAt": "MASKED DATE",
  },
  "groupId": "test_group_1_id",
  "id": "test_unit_01",
  "isAcceptingOrders": true,
  "name": "Késdobáló S",
  "openingHours": "09:00-22:00",
  "openingHoursNext7": Any<Array>,
  "orderPolicy": "placeOnly",
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": "faded",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "unit": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47.490108,
        "lng": 19.047077,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_unit_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPolicy": "placeOnly",
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": "faded",
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": "MASKED DATE",
  },
}
`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance - using old API 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47.48992,
      "lng": 19.046135,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chainId": "test_chain_1_id",
  "currency": "EUR",
  "distance": 0,
  "groupId": "test_group_1_id",
  "id": "test_unit_03",
  "isAcceptingOrders": true,
  "name": "Késdobáló S",
  "openingHours": "09:00-22:00",
  "openingHoursNext7": Any<Array>,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "indicator": "#30bf60",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
}
`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance - using old API: retrieved unit_01 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47.490108,
      "lng": 19.047077,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chainId": "test_chain_1_id",
  "currency": "EUR",
  "distance": 74,
  "groupId": "test_group_1_id",
  "id": "test_unit_01",
  "isAcceptingOrders": true,
  "name": "Késdobáló S",
  "openingHours": "09:00-22:00",
  "openingHoursNext7": Any<Array>,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "indicator": "#30bf60",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
}
`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance - using resolver 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47.48992,
      "lng": 19.046135,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chain": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Prisoner chain description",
      "hu": "Rab lánc leírás",
    },
    "email": "testuser+chainadmin@anyupp.com",
    "id": "test_chain_1_id",
    "isActive": true,
    "name": "˜Rab lánc S",
    "phone": "1234567890",
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "updatedAt": "MASKED DATE",
  },
  "chainId": "test_chain_1_id",
  "currency": "EUR",
  "distance": 0,
  "group": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test group #test_group_1_id description",
      "hu": "Teszt group #test_group_1_id leírás",
    },
    "email": "testuser+groupadmin@anyupp.com",
    "id": "test_group_1_id",
    "name": "Monád csoport S",
    "phone": "36701234123",
    "updatedAt": "MASKED DATE",
  },
  "groupId": "test_group_1_id",
  "id": "test_unit_03",
  "isAcceptingOrders": true,
  "name": "Késdobáló S",
  "openingHours": "09:00-22:00",
  "openingHoursNext7": Any<Array>,
  "orderPolicy": null,
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": null,
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "unit": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47.48992,
        "lng": 19.046135,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_unit_03",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": null,
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": "MASKED DATE",
  },
}
`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance - using resolver: retrieved unit_01 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47.490108,
      "lng": 19.047077,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chain": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Prisoner chain description",
      "hu": "Rab lánc leírás",
    },
    "email": "testuser+chainadmin@anyupp.com",
    "id": "test_chain_1_id",
    "isActive": true,
    "name": "˜Rab lánc S",
    "phone": "1234567890",
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "updatedAt": "MASKED DATE",
  },
  "chainId": "test_chain_1_id",
  "currency": "EUR",
  "distance": 74,
  "group": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test group #test_group_1_id description",
      "hu": "Teszt group #test_group_1_id leírás",
    },
    "email": "testuser+groupadmin@anyupp.com",
    "id": "test_group_1_id",
    "name": "Monád csoport S",
    "phone": "36701234123",
    "updatedAt": "MASKED DATE",
  },
  "groupId": "test_group_1_id",
  "id": "test_unit_01",
  "isAcceptingOrders": true,
  "name": "Késdobáló S",
  "openingHours": "09:00-22:00",
  "openingHoursNext7": Any<Array>,
  "orderPolicy": "placeOnly",
  "paymentModes": Array [
    Object {
      "caption": null,
      "method": "cash",
      "type": "cash",
    },
    Object {
      "caption": null,
      "method": "card",
      "type": "card",
    },
    Object {
      "caption": null,
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "ratingPolicies": Array [
    Object {
      "description": Object {
        "de": null,
        "en": "Desc",
        "hu": null,
      },
      "key": "question1",
      "ratings": Array [
        Object {
          "icon": null,
          "text": Object {
            "de": null,
            "en": "good",
            "hu": null,
          },
          "value": 1,
        },
      ],
      "title": Object {
        "de": null,
        "en": "Question",
        "hu": null,
      },
    },
  ],
  "serviceFeePolicy": Object {
    "percentage": 10,
    "type": "applicable",
  },
  "soldOutVisibilityPolicy": "faded",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": null,
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "tipPolicy": Object {
    "description": null,
    "minOtherAmount": null,
    "percents": Array [
      2,
    ],
    "title": null,
  },
  "unit": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47.490108,
        "lng": 19.047077,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": "MASKED DATE",
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_unit_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPolicy": "placeOnly",
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": "faded",
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": "MASKED DATE",
  },
}
`;
